Corrigido envio de e-mails com SMTP e ajustes no .env e laravel telescope
